# Turin-Interpreter

./: .gitignore  CMakeLists.txt  Turing-Interpreter.sln  Turing-Interpreter.vcxproj  Turing-Interpreter.vcxproj.filters  Turing-Program.txt
src/cpp/: Console.cpp  TuringMachine.cpp  main.cpp
src/include/: Console.h  TuringMachine.h
